tests/positive/Termination/TerminatingG.mjuvix
module TerminatingG;

axiom A : Type;

f : A -> A -> A;

terminating
g : A -> A -> A;

g x y := f x x;
f x y := g x (f x x);

end;
