tests/negative/MicroJuvix/NoStrictlyPositiveDataTypes/E7.mjuvix
module E7;

inductive T0 (A : Type) (B : Type) {
c0 : (B -> A) -> T0 A B;
};

inductive T1 (A : Type) {
c1 : (A -> T0 A (T1 A)) -> T1 A;
};

end;
